--- a/1-1 顺序表.md
+++ b/1-1 顺序表.md
@@ -4,7 +4,7 @@
 
 线性表有顺序存储和链式存储两种方式，各有其优点。其中，顺序存储本质上可以看作就是一个数组，增加了一个last指针，用来标记最后一个元素的位置。
 
-插入元素时，先判断位置是否合法、表是否满，如符合要求，则将插入位置及后面的元素都向后移动一位，再将元素放在该位置，并且last指针加一；删除则相反，只要位置合法，直接把删除位置后面的元素向前移动一位即可，需要的删除的元素就会被覆盖掉，last指针减一。
+初始化时将last赋值为-1，即最后一个元素在-1的位置，即表中没有元素；插入元素时，先判断位置是否合法、表是否满，如符合要求，则将插入位置及后面的元素都向后移动一位，再将元素放在该位置，并且last指针加一；删除则相反，只要位置合法，直接把删除位置后面的元素向前移动一位即可，需要的删除的元素就会被覆盖掉，last指针减一。
 
 ## 实现代码
 
