--- a/6-4 顺序表操作集 （20 分).md
+++ b/6-4 顺序表操作集 （20 分).md
@@ -122,52 +122,46 @@ FULL Insertion Error: 0 is not in.
 ## 代码：
 ```c
 List MakeEmpty() {
-	List L = (List)malloc(sizeof(struct LNode));
-	L->Last = -1;
-	return L;
+    List L = (List)malloc(sizeof(struct LNode));
+    L->Last = -1;
+    return L;
 }
 
 Position Find(List L, ElementType X) {
-	Position i;
-	for (i = 0; i <= L->Last; i++) {
-		if (L->Data[i] == X)
-			return i;
-	}
-	return ERROR;
+    for (Position i = 0; i <= L->Last; ++i) {
+        if (L->Data[i] == X) {
+            return i;
+        }
+    }
+    return ERROR;
 }
 
 bool Insert(List L, ElementType X, Position P) {
-	Position i;
-	if (L->Last >= MAXSIZE - 1) {
-		printf("FULL");
-		return false;
-	}
-	else if (P<0 || P>L->Last + 1) {
-		printf("ILLEGAL POSITION");
-		return false;
-	}
-	else {
-		for (i = L->Last; i >= P; i--) {
-			L->Data[i + 1] = L->Data[i];
-		}
-		L->Data[P] = X;
-		L->Last++;
-		return true;
-	}
+    if (L->Last >= MAXSIZE - 1) {
+        printf("FULL");
+        return false;
+    }
+    if (P<0 || P>L->Last + 1) {
+        printf("ILLEGAL POSITION");
+        return false;
+    }
+    for (Position i = L->Last; i >= P; --i) {
+        L->Data[i + 1] = L->Data[i];
+    }
+    L->Data[P] = X;
+    ++L->Last;
+    return true;
 }
 
 bool Delete(List L, Position P) {
-	Position i;
-	if (P<0 || P>L->Last) {
-		printf("POSITION %d EMPTY", P);
-		return false;
-	}
-	else {
-		for (i = P; i < L->Last; i++) {
-			L->Data[i] = L->Data[i + 1];
-		}
-		L->Last--;
-		return true;
-	}
+    if (P < 0 || P > L->Last) {
+        printf("POSITION %d EMPTY", P);
+        return false;
+    }
+    for (Position i = P; i < L->Last; ++i) {
+        L->Data[i] = L->Data[i + 1];
+    }
+    --L->Last;
+    return true;
 }
 ```
