--- a/1-1 顺序表.md
+++ b/1-1 顺序表.md
@@ -4,7 +4,7 @@
 
 线性表有顺序存储和链式存储两种方式，各有其优点。其中，顺序存储本质上可以看作就是一个数组，增加了一个last指针，用来标记最后一个元素的位置。
 
-初始化时将last赋值为-1，即最后一个元素在-1的位置，即表中没有元素；插入元素时，先判断位置是否合法、表是否满，如符合要求，则将插入位置及后面的元素都向后移动一位，再将元素放在该位置，并且last指针加一；删除则相反，只要位置合法，直接把删除位置后面的元素向前移动一位即可，需要的删除的元素就会被覆盖掉，last指针减一。
+初始化时将last赋值为-1，即最后一个元素在-1的位置，即表中没有元素；插入元素时，先判断位置是否合法、表是否满，如符合要求，则将插入位置及后面的元素都向后移动一位，再将元素放在该位置，并且last指针加一；删除则相反，只要位置合法，直接把删除位置后面的元素向前移动一位即可，需要的删除的元素就会被覆盖掉，last指针减一；查找元素即遍历顺序表逐个对比，如使用带哨兵的顺序查找，可减少一个循环判断条件。
 
 ## 实现代码
 
@@ -21,8 +21,8 @@ typedef int ElementType;
 typedef int Position; //index, [0, n - 1]
 
 struct LNode {
-    ElementType data[MAXSIZE];
-    Position last;
+	ElementType data[MAXSIZE];
+	Position last;
 };
 
 typedef int Order; //[1, n]
@@ -39,6 +39,7 @@ ElementType ReturnSearch(List L, Order i);
 void Print(List L);
 ElementType ReturnMaxElem(List L);
 Bool DeleteFirstX(List L, ElementType X);
+Position GuardFind(List L, ElementType X);
 
 int main() {
 	//Init
@@ -59,7 +60,7 @@ int main() {
 	//Find
 	printf("The sum you want to find: \n");
 	scanf("%d", &n);
-	printf("Return the elements' indexs(not orders) you want to find: \n");
+	printf("Input the elements, it'll return the indexs(not orders): \n");
 	while (n--) {
 		ElementType x;
 		scanf("%d", &x);
@@ -90,13 +91,13 @@ int main() {
 	//Return the ith element
 	printf("The sum you want to search: \n");
 	scanf("%d", &n);
-	printf("The order of element you want to find: \n");
+	printf("The orders you want to find: \n");
 	while (n--) {
 		Order o;
 		scanf("%d", &o);
 		ElementType x = ReturnSearch(L, o);
 		if (x == ERROR) {
-			printf("The order %d is illegal. \n", o);
+			printf("Order %d is illegal. \n", o);
 		}
 		else {
 			printf("The %dth element is %d. \n", o, x);
@@ -118,12 +119,28 @@ int main() {
 		printf("Deleting error. \n");
 	}
 	else {
-		printf("Deleting successful. \n");
+		printf("First %d deleting successful. \n", x);
 	}
 	printf("\n");
 	//The final list
 	printf("The final list: \n");
 	Print(L);
+	printf("\n\n");
+	//GuardFind
+	printf("The sum you want to find: \n");
+	scanf("%d", &n);
+	printf("Input the elements, it'll return the indexs(not orders): \n");
+	while (n--) {
+		ElementType x;
+		scanf("%d", &x);
+		Position p = GuardFind(L, x);
+		if (p == ERROR) {
+			printf("Finding error: %d is not in.\n");
+		}
+		else {
+			printf("%d is at position %d.\n", x, p);
+		}
+	}
 	return 0;
 }
 
@@ -211,20 +228,32 @@ Bool DeleteFirstX(List L, ElementType X) {
 	}
 	return flag;
 }
+
+Position GuardFind(List L, ElementType X) {
+	Position i = 0;
+	L->data[L->last + 1] = X;
+	while (L->data[i] != X) {
+		++i;
+	}
+	return i == L->last + 1 ? ERROR : i;
+}
+
 ```
 
 ## 测试样例
 
 ```
 8
-9 8 7 6 6 5 4 3
-3
-3 5 8
+1 2 3 4 5 6 6 7
+2
+1 7
 2
 8 8
 2
-8 7
+1 8
 6
+2
+5 2
 ```
 
 ## 调试结果
