--- a/1-1 顺序表.md
+++ b/1-1 顺序表.md
@@ -40,6 +40,8 @@ void Print(List L);
 ElementType ReturnMaxElem(List L);
 Bool DeleteFirstX(List L, ElementType X);
 Position GuardFind(List L, ElementType X);
+void InsertionSort(List L);
+Position BinarySearch(List L, ElementType X);
 
 int main() {
 	//Init
@@ -134,6 +136,27 @@ int main() {
 		ElementType x;
 		scanf("%d", &x);
 		Position p = GuardFind(L, x);
+		if (p == ERROR) {
+			printf("Finding error: %d is not in.\n");
+		}
+		else {
+			printf("%d is at position %d.\n", x, p);
+		}
+	}
+	printf("\n");
+	//InsertionSort
+	InsertionSort(L);
+	printf("The list after insertion: \n");
+	Print(L);
+	printf("\n\n");
+	//BinarySearch
+	printf("The sum you want to find: \n");
+	scanf("%d", &n);
+	printf("Input the elements, it'll return the indexs(not orders): \n");
+	while (n--) {
+		ElementType x;
+		scanf("%d", &x);
+		Position p = BinarySearch(L, x);
 		if (p == ERROR) {
 			printf("Finding error: %d is not in.\n");
 		}
@@ -238,6 +261,35 @@ Position GuardFind(List L, ElementType X) {
 	return i == L->last + 1 ? ERROR : i;
 }
 
+void InsertionSort(List L) {
+	for (Position i = 1; i <= L->last; ++i) {
+		ElementType temp = L->data[i];
+		Position j = i;
+		while (j > 0 && L->data[j - 1] > temp) {
+			L->data[j] = L->data[j - 1];
+			--j;
+		}
+		L->data[j] = temp;
+	}
+}
+
+Position BinarySearch(List L, ElementType X) {
+	Position low = 0, high = L->last;
+	while (low <= high) {
+		Position mid = (low + high) / 2;
+		if (L->data[mid] == X) {
+			return mid;
+		}
+		else if (L->data[mid] > X) {
+			high = mid - 1;
+		}
+		else {
+			low = mid + 1;
+		}
+	}
+	return ERROR;
+}
+
 ```
 
 ## 测试样例
@@ -250,10 +302,12 @@ Position GuardFind(List L, ElementType X) {
 2
 8 8
 2
-1 8
+7 8
 6
 2
-5 2
+7 2
+2
+3 6
 ```
 
 ## 调试结果
