--- a/1-1 顺序表.md
+++ b/1-1 顺序表.md
@@ -40,6 +40,8 @@ void Print(List L);
 ElementType ReturnMaxElem(List L);
 Bool DeleteFirstX(List L, ElementType X);
 Position GuardFind(List L, ElementType X);
+void BubbleSort(List L);
+void SelectionSort(List L);
 void InsertionSort(List L);
 Position BinarySearch(List L, ElementType X);
 
@@ -129,7 +131,7 @@ int main() {
 	Print(L);
 	printf("\n\n");
 	//GuardFind
-	printf("The sum you want to find: \n");
+	printf("The sum you want to find(guard find): \n");
 	scanf("%d", &n);
 	printf("Input the elements, it'll return the indexs(not orders): \n");
 	while (n--) {
@@ -144,13 +146,23 @@ int main() {
 		}
 	}
 	printf("\n");
+	//BubbleSort
+	BubbleSort(L);
+	printf("The list after bubble sort: \n");
+	Print(L);
+	printf("\n\n");
+	//SelectionSort
+	SelectionSort(L);
+	printf("The list after selection sort: \n");
+	Print(L);
+	printf("\n\n");
 	//InsertionSort
 	InsertionSort(L);
-	printf("The list after insertion: \n");
+	printf("The list after insertion sort: \n");
 	Print(L);
 	printf("\n\n");
 	//BinarySearch
-	printf("The sum you want to find: \n");
+	printf("The sum you want to find(binary search): \n");
 	scanf("%d", &n);
 	printf("Input the elements, it'll return the indexs(not orders): \n");
 	while (n--) {
@@ -261,6 +273,30 @@ Position GuardFind(List L, ElementType X) {
 	return i == L->last + 1 ? ERROR : i;
 }
 
+void BubbleSort(List L) {
+	for (Position i = 0; i <= L->last; ++i) {
+		for (Position j = 0; j < L->last; ++j) {
+			if (L->data[j] > L->data[j + 1]) {
+				ElementType temp = L->data[j];
+				L->data[j] = L->data[j + 1];
+				L->data[j + 1] = temp;
+			}
+		}
+	}
+}
+
+void SelectionSort(List L) {
+	for (Position i = 0; i < L->last; ++i) {
+		for (Position j = i + 1; j <= L->last; ++j) {
+			if (L->data[i] < L->data[j]) {
+				ElementType temp = L->data[i];
+				L->data[i] = L->data[j];
+				L->data[j] = temp;
+			}
+		}
+	}
+}
+
 void InsertionSort(List L) {
 	for (Position i = 1; i <= L->last; ++i) {
 		ElementType temp = L->data[i];
@@ -296,18 +332,18 @@ Position BinarySearch(List L, ElementType X) {
 
 ```
 8
-1 2 3 4 5 6 6 7
+3 5 6 6 7 2 4 1
 2
-1 7
+3 1
 2
 8 8
 2
-7 8
+2 8
 6
 2
-7 2
+1 6
 2
-3 6
+4 6
 ```
 
 ## 调试结果
